# max-films-staff-pick-tracker

./: pyproject.toml
src/max_films_staff_pick_tracker/: app.py  main.py
